# Relay-AI-Support

./: .gitignore  .~lock.Untitled 1.odt#  README.md  Untitled 1.odt  docker-compose.yml
backend/: .env.example  alembic.ini  pyproject.toml  relayai.db  test_spawn.py
backend/alembic/: env.py
backend/app/: main.py
backend/app/ai_engine/: agents.py  graph.py  llm.py  prompts.py  state.py  tool_integration.py  vector_store.py
backend/app/ai_engine/sample_docs/: billing_policy.txt  faq.txt  troubleshooting.txt
backend/app/api/: agent.py  ai.py  analytics.py  api_keys.py  auth.py  customers.py  dashboard.py  external.py  knowledge.py  notifications.py  settings.py  tickets.py  webhooks.py  websockets.py
backend/app/background/: __init__.py  celery_app.py  tasks.py
backend/app/core/: __init__.py  config.py  middleware.py  tenant.py  ws_manager.py
backend/app/db/: database.py  models.py  seed.py
backend/app/db/migrations/: env.py
backend/app/models/: __init__.py  ai.py  api_key.py  audit.py  base.py  customer.py  knowledge.py  org.py  ticket.py  webhook.py
backend/app/repositories/: ticket_repository.py
backend/app/schemas/: ticket.py
backend/app/services/: agent_service.py  ai_service.py  api_key_service.py  rag_service.py  ticket_service.py  tool_service.py  webhook_service.py
backend/tests/: conftest.py  test_auth.py  test_auth_jwt.py  test_e2e_basic.py  test_phase2.py  test_phase2_api_keys.py  test_phase3_webhooks.py  test_phase8_audit.py  test_prompts.py  test_tickets.py  test_tool_service.py
frontend/: package.json
frontend/src/: router.tsx  (+2 more)
(+29 files in other folders)
