[project]
name = "relayai-support-backend"
version = "0.1.0"
description = "FastAPI backend for RelayAI Support"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.20.0",
    "alembic>=1.13.3",
    "asyncpg>=0.30.0",
    "fastapi>=0.136.3",
    "langchain-google-genai>=4.2.4",
    "langchain-qdrant>=1.1.0",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.2.2",
    "pydantic-settings>=2.14.1",
    "PyJWT>=2.8.0",
    "prometheus-client>=0.16.0",
    "aioredis>=2.0.0",
    "python-dotenv>=1.0.1",
    "qdrant-client>=1.18.0",
    "sqlalchemy>=2.0.36",
    "uvicorn[standard]>=0.48.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.0",
]
